--- a/index.html
+++ b/index.html
@@ -4,49 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title lang="en">WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title lang="en">WebStudio</title>
   </head>
 
   <body>
     <!--Шапка сайта-->
-    <header>
-      <nav>
-        <a class="logo-site" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
-        >
-        <ul class="list">
-          <li><a class="link-nav current" href="./index.html">Студия</a></li>
-          <li>
-            <a class="link-nav" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="link-nav" href="">Контакты</a></li>
-        </ul>
-      </nav>
+    <header class="page-header">
+      <div class="container">
+        <nav>
+          <a class="logo-site" href="./index.html"
+            ><span class="logo-part">Web</span>Studio</a
+          >
+          <ul class="list">
+            <li><a class="link-nav current" href="./index.html">Студия</a></li>
+            <li>
+              <a class="link-nav" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li><a class="link-nav" href="">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul class="list">
-        <li>
-          <a class="link-contacts" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="link-contacts" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+        <ul class="list">
+          <li>
+            <a class="link-contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link-contacts" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <!--Герой-->
-      <section class="hero-section">
+      <section class="section hero">
         <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
@@ -56,7 +62,7 @@
 
       <!--Наши достоинства-->
 
-      <section>
+      <section class="container">
         <h2>Наши достоинства</h2>
         <ul class="list">
           <li>
@@ -92,7 +98,7 @@
 
       <!--Чем мы занимаемся-->
 
-      <section>
+      <section class="container">
         <h2 class="heading-section">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
@@ -117,61 +123,77 @@
 
       <!--Наша команда-->
 
-      <section class="team-section">
-        <h2 class="heading-section">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/сотрудник1.jpg" alt="сотрудник 1" width="270" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p class="title-info" lang="en">Product Designer</p>
-          </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="heading-section">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/сотрудник1.jpg"
+                alt="сотрудник 1"
+                width="270"
+              />
+              <h3 class="title">Игорь Демьяненко</h3>
+              <p class="title-info" lang="en">Product Designer</p>
+            </li>
 
-          <li>
-            <img
-              src="./images/сотрудница2.jpg"
-              alt="сотрудница 2"
-              width="270"
-            />
-            <h3 class="title">Ольга Репина</h3>
-            <p class="title-info" lang="en">Frontend Developer</p>
-          </li>
+            <li>
+              <img
+                src="./images/сотрудница2.jpg"
+                alt="сотрудница 2"
+                width="270"
+              />
+              <h3 class="title">Ольга Репина</h3>
+              <p class="title-info" lang="en">Frontend Developer</p>
+            </li>
 
-          <li>
-            <img src="./images/сотрудник3.jpg" alt="сотрудник 3" width="270" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p class="title-info" lang="en">Marketing</p>
-          </li>
+            <li>
+              <img
+                src="./images/сотрудник3.jpg"
+                alt="сотрудник 3"
+                width="270"
+              />
+              <h3 class="title">Николай Тарасов</h3>
+              <p class="title-info" lang="en">Marketing</p>
+            </li>
 
-          <li>
-            <img src="./images/сотрудник4.jpg" alt="сотрудник 4" width="270" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p class="title-info" lang="en">UI Designer</p>
-          </li>
-        </ul>
+            <li>
+              <img
+                src="./images/сотрудник4.jpg"
+                alt="сотрудник 4"
+                width="270"
+              />
+              <h3 class="title">Михаил Ермаков</h3>
+              <p class="title-info" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Контакты-->
 
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        ><span class="logo-part">Web</span>Studio</a
-      >
-      <address class="adress">
-        <p class="text-adress">г. Киев, пр-т Леси Украинки,</p>
-        <ul class="list">
-          <li>
-            <a class="link-adress" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link-adress" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo-footer" href="./index.html"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <address class="adress">
+          <p class="text-adress">г. Киев, пр-т Леси Украинки,</p>
+          <ul class="list">
+            <li>
+              <a class="link-adress" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link-adress" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
