--- a/portfolio.html
+++ b/portfolio.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Портфолио</title>
+    
   </head>
 
   <body>
     <!--Шапка сайта-->
-    <header>
+   <header class="page-header">
+     <div class="container">
       <nav>
         <a class="logo-site" href="./index.html"
           ><span class="logo-part">Web</span>Studio</a
@@ -42,6 +45,7 @@
           </li>
         </ul>
       </nav>
+      </div>
     </header>
 
     <main>
