--- a/portfolio.html
+++ b/portfolio.html
@@ -11,184 +11,196 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-    
   </head>
 
   <body>
     <!--Шапка сайта-->
-   <header class="page-header">
-     <div class="container">
-      <nav>
-        <a class="logo-site" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
-        >
-        <ul class="list">
-          <li><a class="link-nav" href="./index.html">Студия</a></li>
-          <li>
-            <a class="link-nav current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="link-nav" href="">Контакты</a></li>
-        </ul>
+    <header class="page-header">
+      <div class="container">
+        <nav>
+          <a class="logo-site" href="./index.html"
+            ><span class="logo-part">Web</span>Studio</a
+          >
+          <ul class="list">
+            <li><a class="link-nav" href="./index.html">Студия</a></li>
+            <li>
+              <a class="link-nav current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li><a class="link-nav" href="">Контакты</a></li>
+          </ul>
 
-        <ul class="list">
-          <li>
-            <a class="link-contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link-contacts" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </nav>
+          <ul class="list">
+            <li>
+              <a class="link-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link-contacts" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
 
     <main>
-      <!--Основной контент страницы-->
-      <h1 class="title-port">Наши направления</h1>
-      <ul class="list">
-        <li><button class="btn-port" type="button">Все</button></li>
-        <li><button class="btn-port" type="button">Веб-сайты</button></li>
-        <li><button class="btn-port" type="button">Приложения</button></li>
-        <li><button class="btn-port" type="button">Дизайн</button></li>
-        <li><button class="btn-port" type="button">Маркетинг</button></li>
-      </ul>
+      <section class="section portfolio">
+        <!--Основной контент страницы-->
+        <div class="container portfolio">
+          <div class="filter-portfolio">
+            <h1 class="title visually-hidden">Наши направления</h1>
+            <ul class="list">
+              <li><button class="btn-port" type="button">Все</button></li>
+              <li><button class="btn-port" type="button">Веб-сайты</button></li>
+              <li>
+                <button class="btn-port" type="button">Приложения</button>
+              </li>
+              <li><button class="btn-port" type="button">Дизайн</button></li>
+              <li><button class="btn-port" type="button">Маркетинг</button></li>
+            </ul>
+          </div>
 
-      <section>
-        <h2>Примеры работ</h2>
-        <ul class="list">
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Технокряк.jpg"
-                alt="веб-сайт Технокряк"
-                width="370"
-              />
-              <h3 class="heding-works">Технокряк</h3>
-              <p class="text-works">Веб-сайт</p>
-            </a>
-          </li>
+          <div class="work-examples">
+            <h2 class="title visually-hidden">Примеры работ</h2>
+            <ul class="list">
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Технокряк.jpg"
+                    alt="веб-сайт Технокряк"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Технокряк</h3>
+                  <p class="text-works">Веб-сайт</p>
+                </a>
+              </li>
 
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/NewOrlean.jpg"
-                alt="дизайн постера баскетбольного матча"
-                width="370"
-              />
-              <h3 class="heding-works">Постер New Orlean vs Golden Star</h3>
-              <p class="text-works">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Seafood.jpg"
-                alt="приложения ресторана морской еды"
-                width="370"
-              />
-              <h3 class="heding-works">Ресторан Seafood</h3>
-              <p class="text-works">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Prime.jpg"
-                alt="изображение наушников"
-                width="370"
-              />
-              <h3 class="heding-works">Проект Prime</h3>
-              <p class="text-works">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Boxes.jpg"
-                alt="иконка приложения боксес"
-                width="370"
-              />
-              <h3 class="heding-works">Проект Boxes</h3>
-              <p class="text-works">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Inspiration.jpg"
-                alt="дизайн журнала"
-                width="370"
-              />
-              <h3 class="heding-works">Inspiration has no borders</h3>
-              <p class="text-works">Веб-сайт</p>
-            </a>
-          </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/NewOrlean.jpg"
+                    alt="дизайн постера баскетбольного матча"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Постер New Orlean vs Golden Star</h3>
+                  <p class="text-works">Дизайн</p>
+                </a>
+              </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Seafood.jpg"
+                    alt="приложения ресторана морской еды"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Ресторан Seafood</h3>
+                  <p class="text-works">Приложение</p>
+                </a>
+              </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Prime.jpg"
+                    alt="изображение наушников"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Проект Prime</h3>
+                  <p class="text-works">Маркетинг</p>
+                </a>
+              </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Boxes.jpg"
+                    alt="иконка приложения боксес"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Проект Boxes</h3>
+                  <p class="text-works">Приложение</p>
+                </a>
+              </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Inspiration.jpg"
+                    alt="дизайн журнала"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Inspiration has no borders</h3>
+                  <p class="text-works">Веб-сайт</p>
+                </a>
+              </li>
 
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Limited.jpg"
-                alt="изображение журнала издания"
-                width="370"
-              />
-              <h3 class="heding-works">Издание Limited Edition</h3>
-              <p class="text-works">Дизайн</p>
-            </a>
-          </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Limited.jpg"
+                    alt="изображение журнала издания"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Издание Limited Edition</h3>
+                  <p class="text-works">Дизайн</p>
+                </a>
+              </li>
 
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Lab.jpg"
-                alt="иконка проекта по маркетингу"
-                width="370"
-              />
-              <h3 class="heding-works">Проект Lab</h3>
-              <p class="text-works">Маркетинг</p>
-            </a>
-          </li>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Lab.jpg"
+                    alt="иконка проекта по маркетингу"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Проект Lab</h3>
+                  <p class="text-works">Маркетинг</p>
+                </a>
+              </li>
 
-          <li>
-            <a class="link-works" href="">
-              <img
-                src="./images/portfolio/Growing.jpg"
-                alt="иконка приложения для бизнеса"
-                width="370"
-              />
-              <h3 class="heding-works">Growing Business</h3>
-              <p class="text-works">Приложение</p>
-            </a>
-          </li>
-        </ul>
+              <li>
+                <a class="link-works" href="">
+                  <img
+                    src="./images/portfolio/Growing.jpg"
+                    alt="иконка приложения для бизнеса"
+                    width="370"
+                  />
+                  <h3 class="heding-works">Growing Business</h3>
+                  <p class="text-works">Приложение</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
     <!--Контакты-->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        ><span class="logo-part">Web</span>Studio</a
-      >
-      <address class="adress">
-        <p class="text-adress">г. Киев, пр-т Леси Украинки,</p>
-        <ul class="list">
-          <li>
-            <a class="link-adress" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link-adress" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo-footer" href="./index.html"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <address class="adress">
+          <p class="text-adress">г. Киев, пр-т Леси Украинки,</p>
+          <ul class="list">
+            <li>
+              <a class="link-adress" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link-adress" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
