--- a/index.html
+++ b/index.html
@@ -64,63 +64,67 @@
 
       <!--Наши достоинства-->
 
-      <section class="container values">
-        <h2 class="title visually-hidden">Наши достоинства</h2>
-        <ul class="list values">
-          <li class="item-values">
-            <h3 class="title-values">Внимание к деталям</h3>
-            <p class="text-values">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="item-values">
-            <h3 class="title-values">Пунктуальность</h3>
-            <p class="text-values">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="item-values">
-            <h3 class="title-values">Планирование</h3>
-            <p class="text-values">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="item-values">
-            <h3 class="title-values">Современные технологии</h3>
-            <p class="text-values">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section>
+        <div class="container values">
+          <h2 class="title visually-hidden">Наши достоинства</h2>
+          <ul class="list values">
+            <li class="item-values">
+              <h3 class="title-values">Внимание к деталям</h3>
+              <p class="text-values">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item-values">
+              <h3 class="title-values">Пунктуальность</h3>
+              <p class="text-values">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item-values">
+              <h3 class="title-values">Планирование</h3>
+              <p class="text-values">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item-values">
+              <h3 class="title-values">Современные технологии</h3>
+              <p class="text-values">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Чем мы занимаемся-->
 
-      <section class="container doing">
-        <h2 class="heading-section">Чем мы занимаемся</h2>
-        <ul class="list doing">
-          <li class="item-doing">
-            <img
-              src="./images/work_on_laptop.jpg"
-              alt="работа на ноутбуке"
-              width="370"
-            />
-          </li>
-          <li class="item-doing">
-            <img
-              src="./images/laptop_and_phone.jpg"
-              alt="ноутбук и телефон"
-              width="370"
-            />
-          </li>
-          <li class="item-doing">
-            <img src="./images/tablet.jpg" alt="планшет" width="370" />
-          </li>
-        </ul>
+      <section>
+        <div class="container doing">
+          <h2 class="heading-section">Чем мы занимаемся</h2>
+          <ul class="list doing">
+            <li class="item-doing">
+              <img
+                src="./images/work_on_laptop.jpg"
+                alt="работа на ноутбуке"
+                width="370"
+              />
+            </li>
+            <li class="item-doing">
+              <img
+                src="./images/laptop_and_phone.jpg"
+                alt="ноутбук и телефон"
+                width="370"
+              />
+            </li>
+            <li class="item-doing">
+              <img src="./images/tablet.jpg" alt="планшет" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Наша команда-->
@@ -135,8 +139,10 @@
                 alt="сотрудник 1"
                 width="270"
               />
-              <h3 class="title-team">Игорь Демьяненко</h3>
-              <p class="title-info" lang="en">Product Designer</p>
+              <div class="team-info">
+                <h3 class="title-team">Игорь Демьяненко</h3>
+                <p class="title-info" lang="en">Product Designer</p>
+              </div>
             </li>
 
             <li class="item-team">
@@ -145,8 +151,10 @@
                 alt="сотрудница 2"
                 width="270"
               />
-              <h3 class="title-team">Ольга Репина</h3>
-              <p class="title-info" lang="en">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="title-team">Ольга Репина</h3>
+                <p class="title-info" lang="en">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="item-team">
@@ -155,8 +163,10 @@
                 alt="сотрудник 3"
                 width="270"
               />
-              <h3 class="title-team">Николай Тарасов</h3>
-              <p class="title-info" lang="en">Marketing</p>
+              <div class="team-info">
+                <h3 class="title-team">Николай Тарасов</h3>
+                <p class="title-info" lang="en">Marketing</p>
+              </div>
             </li>
 
             <li class="item-team">
@@ -165,8 +175,10 @@
                 alt="сотрудник 4"
                 width="270"
               />
-              <h3 class="title-team">Михаил Ермаков</h3>
-              <p class="title-info" lang="en">UI Designer</p>
+              <div class="team-info">
+                <h3 class="title-team">Михаил Ермаков</h3>
+                <p class="title-info" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -175,7 +187,7 @@
 
     <!--Контакты-->
 
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container footer">
         <a class="logo-footer" href="./index.html"
           ><span class="logo-part">Web</span>Studio</a
@@ -183,12 +195,12 @@
         <address class="adress">
           <p class="text-adress">г. Киев, пр-т Леси Украинки,</p>
           <ul class="list adress">
-            <li>
-              <a class="link-adress mail" href="mailto:info@devstudio.com"
+            <li class="item-adress">
+              <a class="link-adress" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="item-adress">
               <a class="link-adress" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
