исправляет ошибки в геометрии

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
       <!--Наши достоинства-->
 
-      <section>
-        <div class="container values">
+      <section class="values-section">
+        <div class="container">
           <h2 class="title visually-hidden">Наши достоинства</h2>
           <ul class="list values">
             <li class="item-values">
@@ -102,8 +102,8 @@
 
       <!--Чем мы занимаемся-->
 
-      <section>
-        <div class="container doing">
+      <section class="section-doing">
+        <div class="container">
           <h2 class="heading-section">Чем мы занимаемся</h2>
           <ul class="list doing">
             <li class="item-doing">
